# linked

./: .env.example  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  afterSignHook.js  commitlint.config.js  contributing.md  crowdin.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  prebuild.js  tailwind.config.js  tailwind.js  tsconfig.json  vite.config.ts  vue.config.js  webpack.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-electron.yml  build.yml
.husky/: commit-msg
appIcon/: icon.afdesign
electron/: index.js  preload.js
launcher/: launcher
scripts/: watch.js
snap/: snapcraft.yaml
src/: App.vue  background.js  i18n.js  i18n.ts  index.html  index.js  main.js  main.ts  router.ts  styles.css  translation.js  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: content.ts
src/assets/: tailwind.css
src/components/: YearCalendar.vue  app-header.vue  back-button.vue  day-switcher.vue  days-per-week-dropdown.vue  dropdown.vue  editor-extensions.js  editor.vue  enable-updates.vue  filepath-settings.vue  icon.vue  language-dropdown.vue  locale-settings.vue  micromodal.vue  navBar.vue  search-settings.vue  theme-settings.vue  theme-switcher.vue  update-dropdown.vue  update-interval.vue  update-settings.vue  week-switcher.vue
(+81 files in other folders)
